# oasis-jsbridge-android

./: .gitignore  .gitlab-ci.yml  README.md  TODO.txt  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle  version
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
jsbridge/: CMakeLists.txt  build.gradle  consumer-proguard-rules.pro
jsbridge/src/androidTest/aidl/de/prosiebensat1digital/oasisjsbridge/: TestAidlCallback.aidl  TestAidlEnum.aidl  TestAidlInterface.aidl  TestAidlParcelable.aidl
jsbridge/src/androidTest/assets/js/: api.js  test.js  test_with_error.js
jsbridge/src/androidTest/kotlin/de/prosiebensat1digital/oasisjsbridge/: BenchmarkTest.kt  FeatureTest.kt  JsBridgeJavaTest.java  JsBridgeTest.kt  ReadmeTest.kt  TestHttpInterceptor.kt
jsbridge/src/main/: AndroidManifest.xml
jsbridge/src/main/assets/js/: promise.js  promises.js  xhr.js  xmlhttprequest.js
jsbridge/src/main/assets/js/test/: assertions.js
jsbridge/src/main/jni/: ArgumentLoader.cpp  ArgumentLoader.h  AutoReleasedJSValue.h  DuktapeUtils.cpp  DuktapeUtils.h  ExceptionHandler.cpp  ExceptionHandler.h  JavaMethod.cpp  JavaMethod.h  JavaObject.cpp  JavaObject.h  JavaScriptLambda.cpp  JavaScriptLambda.h  JavaScriptMethod.cpp  JavaScriptMethod.h  JavaScriptObject.cpp  JavaScriptObject.h  JavaScriptObjectBase.h  JavaScriptObjectMapper.cpp  JavaScriptObjectMapper.h  JavaType.cpp  JavaType.h  JavaTypeId.cpp  JavaTypeId.h  JavaTypeMap.cpp  JavaTypeMap.h  JavaTypeProvider.cpp  JavaTypeProvider.h  JavaType_duktape.cpp  JavaType_quickjs.cpp  JniCache.cpp  JniCache.h  JniInterfaces.cpp  JniInterfaces.h  JsBridgeContext.h  JsBridgeContext_duktape.cpp  JsBridgeContext_quickjs.cpp  QuickJsUtils.cpp  QuickJsUtils.h  README_duktape.cpp  (+14 more)
jsbridge/src/main/jni/duktape/: duk_config.h  duk_source_meta.json  duk_trans_socket.h  duk_trans_socket_unix.c  duktape.c  duktape.cpp  duktape.h
jsbridge/src/main/jni/exceptions/: JniException.cpp  JniException.h  JsException.cpp  JsException.h
jsbridge/src/main/jni/java-types/: AidlInterface.cpp  AidlInterface.h  AidlParcelable.cpp  AidlParcelable.h  Array.cpp  Array.h  Boolean.cpp  Boolean.h  BoxedPrimitive.cpp  BoxedPrimitive.h  Byte.cpp  Byte.h  Deferred.h  Deferred_duktape.cpp  Deferred_quickjs.cpp  Double.cpp  Double.h  Float.cpp  Float.h  FunctionX.cpp  FunctionX.h  FunctionX_duktape.cpp  FunctionX_quickjs.cpp  Integer.cpp  Integer.h  JavaObjectWrapper.cpp  JavaObjectWrapper.h  JsToJavaProxy.cpp  JsToJavaProxy.h  JsToNativeProxy.cpp  JsToNativeProxy.h  JsValue.cpp  JsValue.h  JsonObjectWrapper.cpp  JsonObjectWrapper.h  JsonObjectWrapper_duktape.cpp  JsonObjectWrapper_quickjs.cpp  List.cpp  List.h  Long.cpp  (+13 more)
jsbridge/src/main/jni/jni-helpers/: JArrayLocalRef.h  JObjectArrayLocalRef.h  JStringLocalRef.h  JValue.h  JniContext.cpp  JniContext.h  JniGlobalRef.h  JniLocalFrame.cpp  JniLocalFrame.h  JniLocalRef.h  JniLocalRefStats.cpp  JniLocalRefStats.h  JniRef.h  JniRefHelper.cpp  JniRefHelper.h  JniRefStats.cpp  JniRefStats.h  JniTypes.h  JniValueConverter.h  README.txt  RefCounter.h  VERSION  update.sh
jsbridge/src/main/jni/jni-helpers/test/: CMakeLists.txt  JStringLocalRef_test.cpp  JniGlobalRef_test.cpp  JniHelpersTestFixture.h  JniLocalRef_test.cpp  showCoverage.sh
jsbridge/src/main/jni/quickjs/: libunicode.c  quickjs.c  quickjs.h
jsbridge/src/main/kotlin/de/prosiebensat1digital/oasisjsbridge/: DebugString.kt  JavaObjectWrapper.kt  JavaToJsInterface.kt  JsBridge.kt  JsBridgeConfig.kt  JsBridgeError.kt  JsException.kt  JsToJavaInterface.kt  JsToJavaProxy.kt  JsToNativeInterface.kt  JsToNativeProxy.kt  JsValue.kt  JsonObjectWrapper.kt  Method.kt  NativeObjectWrapper.kt  NativeToJsInterface.kt  Parameter.kt  Payload.kt  PayloadArray.kt  PayloadObject.kt
jsbridge/src/main/kotlin/de/prosiebensat1digital/oasisjsbridge/extensions/: ConsoleExtension.kt  JsDebuggerExtension.kt  LocalStorage.kt  LocalStorageExtension.kt  PromiseExtension.kt  PromisePolyfillExtension.kt  SetTimeoutExtension.kt  XMLHttpRequestExtension.kt
jsbridge/src/mainDebug/: AndroidManifest.xml
jsbridge/src/test/kotlin/de/prosiebensat1digital/oasisjsbridge/: JsonObjectWrapperTest.kt  PayloadObjectTest.kt
scripts/: build-ci.sh  bump.sh  javadoc.gradle  makeProject.sh  publishing.gradle  quality.gradle  semantic_versioning.gradle  utils.sh
